Change default type to object

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 		<p>Convert integer values to number: <input type="checkbox" id="noInt"></p>
 		<p>Convert null values to:
 			<select id="nullType">
-		  		<option value="string" selected="">String</option>
+		  		<option value="object" selected="">Object</option>
+				<option value="string">String</option>
 		  		<option value="number">Number</option>
 				<option value="integer">Integer</option>
 				<option value="boolean">Boolean</option>
